--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <div class="content">
         <h1>Coverage report:
-            <span class="pc_cov">100%</span>
+            <span class="pc_cov">82%</span>
         </h1>
         <aside id="help_panel_wrapper">
             <input id="help_panel_state" type="checkbox">
@@ -54,7 +54,7 @@
         </h2>
         <p class="text">
             <a class="nav" href="https://coverage.readthedocs.io/en/7.8.0">coverage.py v7.8.0</a>,
-            created at 2025-05-06 18:55 +0700
+            created at 2025-05-12 21:16 +0700
         </p>
     </div>
 </header>
@@ -85,6 +85,13 @@
                 <td class="right" data-ratio="26 26">100%</td>
             </tr>
             <tr class="region">
+                <td class="name left"><a href="z_145eef247bfb46b6_external_api_py.html">src\external_api.py</a></td>
+                <td>64</td>
+                <td>29</td>
+                <td>0</td>
+                <td class="right" data-ratio="35 64">55%</td>
+            </tr>
+            <tr class="region">
                 <td class="name left"><a href="z_145eef247bfb46b6_generators_py.html">src\generators.py</a></td>
                 <td>16</td>
                 <td>0</td>
@@ -106,6 +113,13 @@
                 <td class="right" data-ratio="11 11">100%</td>
             </tr>
             <tr class="region">
+                <td class="name left"><a href="z_145eef247bfb46b6_utils_py.html">src\utils.py</a></td>
+                <td>29</td>
+                <td>4</td>
+                <td>0</td>
+                <td class="right" data-ratio="25 29">86%</td>
+            </tr>
+            <tr class="region">
                 <td class="name left"><a href="z_145eef247bfb46b6_widget_py.html">src\widget.py</a></td>
                 <td>36</td>
                 <td>0</td>
@@ -116,10 +130,10 @@
         <tfoot>
             <tr class="total">
                 <td class="name left">Total</td>
-                <td>93</td>
+                <td>186</td>
+                <td>33</td>
                 <td>0</td>
-                <td>0</td>
-                <td class="right" data-ratio="93 93">100%</td>
+                <td class="right" data-ratio="153 186">82%</td>
             </tr>
         </tfoot>
     </table>
@@ -131,7 +145,7 @@
     <div class="content">
         <p>
             <a class="nav" href="https://coverage.readthedocs.io/en/7.8.0">coverage.py v7.8.0</a>,
-            created at 2025-05-06 18:55 +0700
+            created at 2025-05-12 21:16 +0700
         </p>
     </div>
     <aside class="hidden">
